gcc/testsuite/rust/rustc/ui/recursion/recursive-enum.rs
enum List<T> { Cons(T, List<T>), Nil }
// { dg-error ".E0072." "" { target *-*-* } .-1 }

fn main() {}

